# bastille

./: Cargo.toml  FEATURES.md  LICENSE-APACHE  LICENSE-MIT  PLATFORM.md  README.md  build.rs  shell.nix
examples/: bash.rs
src/: lib.rs  main.rs  os.rs  process.rs  util.rs
src/os/: linux.rs  macos.rs
src/os/linux/: creds.rs  net.rs  privs.rs  unshare.rs
src/os/macos/: sandboxfs.rs
