[package]
name = "bastille"
version = "0.1.0"
authors = ["Eyal Kalderon <ebkalderon@gmail.com>"]
edition = "2018"

[features]
default = []
piped = []
piped-merged = []

[dependencies]
libc = "0.2.65"
log = "0.4.8"
os_pipe = "0.9.1"

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.3.3"
ipc-channel = "0.12.2"
libmount = "0.1.15"
openat = "0.1.18"

[target.'cfg(target_os = "linux")'.dependencies.netlink-packet-route]
version = "0.1.0"
git = "https://github.com/little-dude/netlink"

[target.'cfg(target_os = "linux")'.dependencies.netlink-sys]
version = "0.2.0"
git = "https://github.com/little-dude/netlink"

[target.'cfg(target_os = "macos")'.dependencies]
once_cell = "1.2.0"
sandboxfs = "0.1.1"
tempfile = "3.1.0"
time = "0.1.42"
